# LightYears

./: CMakeLists.txt  installDeps.sh
LightYears/: CMakeLists.txt
LightYears/include/framework/: Application.h
LightYears/src/: main.cpp
LightYears/src/framework/: Application.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  MathUtility.h  Object.h  World.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  MathUtility.cpp  Object.cpp  World.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/gameFramework/: GameApplication.h
LightYearsGame/include/player/: PlayerSpaceship.h
LightYearsGame/include/spaceship/: Spaceship.h
LightYearsGame/include/weapon/: BulletShooter.h  Shooter.h
LightYearsGame/src/gameFramework/: GameApplication.cpp
LightYearsGame/src/player/: PlayerSpaceship.cpp
LightYearsGame/src/spaceship/: Spaceship.cpp
LightYearsGame/src/weapon/: BulletShooter.cpp  Shooter.cpp
cmake/: CopyLibToTarget.cmake  CopyLibs.cmake
